Fix up margins on mobile devices for SEO pages.

--- a/app/assets/stylesheets/partials/_seovideo.scss
+++ b/app/assets/stylesheets/partials/_seovideo.scss
@@ -307,7 +307,12 @@ p {
 		float: none;
 	        max-width: $seo-column-left;
 		width: auto;
+                margin-left: 8px;
 	}
+
+        .seovideo-messages {
+                margin-left: 8px;
+        }
 
         .seovideo-genius-ad {
                 display: none;
